# human_follow

./: CMakeLists.txt  README.md  package.xml
src/: simple_tracker.cpp
vrep scenes/: simple_tracker.ttt
